# rust_aceans

CodeCamp/ch_4/p1_char/: Cargo.toml
CodeCamp/vid_player/: Cargo.toml
CodeCamp/vid_player/src/: main.rs
CodeCamp/vlc_player/: Cargo.toml
CodeCamp/vlc_player/src/: main.rs
DSA/: two_sum_bruteforce.go
DSA/RUST DSA/majority_element/: bruteforce.rs  main.rs  optimized.rs
DSA/RUST DSA/missing_duplicate/: Cargo.toml
DSA/day_01/: two_sum_optimized.go
GO/DSA/heap/: heap.go
GO/P2P_Net/: go.mod
GO/fullstack1/: air.toml  go.mod  main.go  readme.md
GO/tutorial/: 2sum.cpp
PBBACKEND/actix_web/: Cargo.toml
VBackend/cpp/: gcd.cpp  gcd.vhd  pid.cpp
VBackend/day_1/: index.js  package-lock.json  package.json  readme.md
VBackend/day_3/: package-lock.json  package.json
VBackend/day_4/: package-lock.json  package.json
VBackend/day_5/: package-lock.json  package.json  readme.md
ch_3_common_rust/: Cargo.toml
ch_3_common_rust/src/: main.rs
guessing_game/src/: main.rs
hello_cargo_proj/: Cargo.toml
ownership/src/: main.rs  test.rs
practice/ch3_easy_prob/: Cargo.toml
practice/enum_erate/: Cargo.toml
practice/owner_ship_asignment/: Cargo.toml
practice/struct_challange/: Cargo.toml
practice/struct_concept_assignment/: Cargo.toml
project/catsay/: Cargo.toml  stderr.txt  stdout.txt
rusty/: fibbonaci_recursion.rs  readme.md  test.py
rusty/ch3_loop/: Cargo.toml
rusty/conditionalsa/: Cargo.toml
rusty/numbercheck/: Cargo.toml
rusty/ownership_ch4/: Cargo.toml
rusty/string_iter/: Cargo.toml
rusty/struct_ts_1/: Cargo.toml
(+93 files in other folders)
